@@ -14,6 +14,20 @@ namespace PayPal.AdaptiveAccounts {
 	public partial class AdaptiveAccountsService : BasePayPalService{
 
 		 public AdaptiveAccountsService() : base("AdaptiveAccounts", "1.0.3"){}
+		/// <summary>
+		/// Sets standard parameters common to all requests
+		/// </summary>
+		private void setStandardParams(AbstractRequestType request)
+		{
+			if (request.Version == null)
+			{
+				request.Version = serviceVersion;
+			}
+			if(request.ErrorLanguage != null && ConfigManager.Instance.GetProperty("languageCode") != null)
+			{
+				request.ErrorLanguage = ConfigManager.Instance.GetProperty("languageCode");
+			}
+		}
 		/**
 		 *		 * Coutries Supported:
 		 * AU - Australia
